# scopus-tools

./: .gitignore  README.md  pyproject.toml  test.md
scopus_tools/: __init__.py  ai_engine.py  api.py  cli.py  core.py  utils.py
tests/: test_legacy_compat.py  test_scopus_tools.py
